objects/Case__x.object
<CustomObject>
    <fields>
        <fullName>Origin__c</fullName>
        <externalDeveloperName>Origin</externalDeveloperName>
        <inlineHelpText>Case.Origin standard field renamed "Origin &amp; Email-to-Case". Stores email2Case address when the Case is created by E2C. 
Useful for automation criteria.
If a new E2C is implemented, add it here in the picklist.
Field hidden.  "Origin__c" is not hidden.</inlineHelpText>
        <label>Origin &amp; Email-to-Case</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>W2C US Clinical</fullName>
                </value>
                <value>
                    <fullName>W2C US Industry</fullName>
                </value>
                <value>
                    <fullName>W2C FR Clinical</fullName>
                </value>
                <value>
                    <fullName>W2C FR Industry</fullName>
                </value>
                <value>
                    <fullName>Non E2C or W2C</fullName>
                </value>
                <value>
                    <fullName>whenutest2+e2cclinicalbmxrout@gmail.com</fullName>
                </value>
                <value>
                    <fullName>whenutest2+e2cindustrybmxrout@gmail.com</fullName>
                </value>
                <value>
                    <fullName>whenutest2+fre2cclinicalbmxrout@gmail.com</fullName>
                </value>
                <value>
                    <fullName>whenutest2+fre2cindustrybmxrout@gmail.com</fullName>
                </value>
                <value>
                    <fullName>whenutest2+usvilinkrout@gmail.com</fullName>
                </value>
                <value>
                    <fullName>whenutest2+e2cclinicalbmxdesign@gmail.com</fullName>
                </value>
                <value>
                    <fullName>CustomerService-BTA@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>CustomerService-Connectivity@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>CustomerService-IDAST@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>CustomerService-ImmunoMolecular@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>UStechnicalsupport@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>Csi.stl@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>csi@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>GCS_microbiology@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>GCS_biomol_marcy@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>GCS_immunomarcy@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>GCS_services@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>GCS_intergratedsolutions@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>CRCclinique@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>CRCindustrie@biomerieux.com</fullName>
                </value>
                <value>
                    <fullName>CanadaHotline@biomerieux.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origin_c__c</fullName>
        <externalDeveloperName>Origin__c</externalDeveloperName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>ViLink</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Post Mail</fullName>
                </value>
                <value>
                    <fullName>Publication</fullName>
                </value>
                <value>
                    <fullName>On Site</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>TF GROUP COMPANY TRANSFER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <referenceTo>User__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>OwnerUSTSC_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>OwnerUSTSC__c</externalDeveloperName>
        <label>Owner US TSC?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PON_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PON__c</externalDeveloperName>
        <label>PONumber?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PONumber_c__c</fullName>
        <externalDeveloperName>PONumber__c</externalDeveloperName>
        <label>Purchase Order Number</label>
        <length>35</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRE1_c__c</fullName>
        <externalDeveloperName>PRE1__c</externalDeveloperName>
        <inlineHelpText>PRE 1. Was there a patient or operator death?</inlineHelpText>
        <label>PRE1.1 Patient or operator death?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRE2P2_c__c</fullName>
        <externalDeveloperName>PRE2P2__c</externalDeveloperName>
        <inlineHelpText>PRE 2.2 If yes, describe in detail</inlineHelpText>
        <label>PRE2.2 If yes, describe in detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRE2_1_c__c</fullName>
        <externalDeveloperName>PRE2_1__c</externalDeveloperName>
        <inlineHelpText>PRE 2.1 Was the patient or operator harmed due to the malfunction of the device, due to inadequate labelling, or as a result of user error?</inlineHelpText>
        <label>PRE2.1 Patient or operator harmed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRE3P2_c__c</fullName>
        <externalDeveloperName>PRE3P2__c</externalDeveloperName>
        <inlineHelpText>PRE 3.2 If yes, describe in detail</inlineHelpText>
        <label>PRE3.2 If yes, describe in detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRE3_1_c__c</fullName>
        <externalDeveloperName>PRE3_1__c</externalDeveloperName>
        <inlineHelpText>PRE 3.1 Was there any indirect harm of the patient reported, such as delay in reporting results, misdiagnosis, delayed treatment, inappropriate treatment, absence of necessary treatment, due to wrong results or inadequate labelling / IFU?</inlineHelpText>
        <label>PRE3.1 Indirect harm patient reported?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRE4_c__c</fullName>
        <externalDeveloperName>PRE4__c</externalDeveloperName>
        <inlineHelpText>PRE 4. Was the patient harmed or treated incorrectly resulting in medical or surgical intervention?</inlineHelpText>
        <label>PRE4 Patient harmed/treated incorrectly?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRE5_c__c</fullName>
        <externalDeveloperName>PRE5__c</externalDeveloperName>
        <inlineHelpText>PRE 5. Was any wrong result, results comparison, or malfunction obtained that meet the criteria defined in PRE Guidance 014764?</inlineHelpText>
        <label>PRE5 Wrong Results PRE Guidance 014764?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRE_YesNo_c__c</fullName>
        <externalDeveloperName>PRE_YesNo__c</externalDeveloperName>
        <inlineHelpText>Outcome of the 6 PRE Questions
- Yes: means it is a PRE (at least 1 PRE answer is Yes) 
- No: means it is not a PRE (if all answers are No, or if PRE questions have not been answered)</inlineHelpText>
        <label>PRE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRRD_c__c</fullName>
        <externalDeveloperName>PRRD__c</externalDeveloperName>
        <inlineHelpText>Product Return Request Date (Trackwise field)</inlineHelpText>
        <label>PRRD</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalDeveloperName>ParentId</externalDeveloperName>
        <label>Parent Case ID</label>
        <length>18</length>
        <referenceTo>Case__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <externalDeveloperName>Priority</externalDeveloperName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <externalDeveloperName>Product_Code__c</externalDeveloperName>
        <label>Product Code</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <externalDeveloperName>ProductId</externalDeveloperName>
        <inlineHelpText>Product concerned by the Case</inlineHelpText>
        <label>Product ID</label>
        <length>18</length>
        <referenceTo>Product2__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Product_Code_c__c</fullName>
        <externalDeveloperName>MaterialCode__c</externalDeveloperName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_c__c</fullName>
        <externalDeveloperName>Product__c</externalDeveloperName>
        <inlineHelpText>To be manually populated if Case concerns a Reagent or a BOM</inlineHelpText>
        <label>Product (Reagent or BOM)</label>
        <length>18</length>
        <referenceTo>Product2__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case1</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>RESULT_Name_c__c</fullName>
        <externalDeveloperName>RESULT_Name__c</externalDeveloperName>
        <label>RESULT Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RESULT_c__c</fullName>
        <externalDeveloperName>RESULT__c</externalDeveloperName>
        <label>RESULT</label>
        <length>18</length>
        <referenceTo>CodeGroup_c__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case5</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>RE_c__c</fullName>
        <externalDeveloperName>RE__c</externalDeveloperName>
        <inlineHelpText>If "Yes", Trackwise report this Case as an RE (Reportable Event)
If "No", Trackwise does NOT report this Case as an RE (Reportable Event)
If empty, Trackwise has not assessed if this Case is a RE (Reportable Event)</inlineHelpText>
        <label>RE</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReagentMaterialCode_c__c</fullName>
        <externalDeveloperName>ReagentMaterialCode__c</externalDeveloperName>
        <label>Reagent material code</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <externalDeveloperName>Reason</externalDeveloperName>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User didn't attend training</fullName>
                </value>
                <value>
                    <fullName>Complex functionality</fullName>
                </value>
                <value>
                    <fullName>Existing problem</fullName>
                </value>
                <value>
                    <fullName>Instructions not clear</fullName>
                </value>
                <value>
                    <fullName>New problem</fullName>
                </value>
                <value>
                    <fullName>Fixed On Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Record Type ID</label>
        <length>18</length>
        <referenceTo>RecordType__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Case Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResendATCEmail_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ResendATCEmail__c</externalDeveloperName>
        <inlineHelpText>Check this box to resend the ATC email to the Customer.
This checkbox will then be reset to unchecked when you save the Case.</inlineHelpText>
        <label>Resend ATC Email</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAMPLE_Name_c__c</fullName>
        <externalDeveloperName>SAMPLE_Name__c</externalDeveloperName>
        <label>SAMPLE Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAMPLE_c__c</fullName>
        <externalDeveloperName>SAMPLE__c</externalDeveloperName>
        <label>SAMPLE</label>
        <length>18</length>
        <referenceTo>CodeGroup_c__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case4</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>SAPAssetNumber_c__c</fullName>
        <externalDeveloperName>SAPAssetNumber__c</externalDeveloperName>
        <label>SAP Asset Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAPCustomerNumber_c__c</fullName>
        <externalDeveloperName>SAPCustomerNumber__c</externalDeveloperName>
        <label>SAP Customer Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPOwner_c__c</fullName>
        <externalDeveloperName>SAPOwner__c</externalDeveloperName>
        <label>SAP Owner</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_SoNumber_c__c</fullName>
        <externalDeveloperName>SAP_SoNumber__c</externalDeveloperName>
        <inlineHelpText>SAP Service Order number of the Service Order used for time confirmations</inlineHelpText>
        <label>SAP Service Order Number</label>
        <length>50</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIGcode_c__c</fullName>
        <externalDeveloperName>SIGcode__c</externalDeveloperName>
        <label>SIG Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AS01</fullName>
                    <label>AS01 - bioNexia Shangaï</label>
                </value>
                <value>
                    <fullName>EU01</fullName>
                    <label>EU01 - COMPLAINT FIRENZE</label>
                </value>
                <value>
                    <fullName>EU02</fullName>
                    <label>EU02 - CQ MARCY</label>
                </value>
                <value>
                    <fullName>EU03</fullName>
                    <label>EU03 - COMPLAINT CRAPONNE</label>
                </value>
                <value>
                    <fullName>EU04</fullName>
                    <label>EU04 - CQ LBM</label>
                </value>
                <value>
                    <fullName>EU05</fullName>
                    <label>EU05 - SMQ LBM</label>
                </value>
                <value>
                    <fullName>EU06</fullName>
                    <label>EU06 - COMPLAINT MADRID</label>
                </value>
                <value>
                    <fullName>EU07</fullName>
                    <label>EU07 - GSS MICROBIO</label>
                </value>
                <value>
                    <fullName>EU08</fullName>
                    <label>EU08 - GSS IMMUNO</label>
                </value>
                <value>
                    <fullName>EU09</fullName>
                    <label>EU09 - CSI MARCY</label>
                </value>
                <value>
                    <fullName>EU11</fullName>
                    <label>EU11 - COMPLAINT GRENOBLE</label>
                </value>
                <value>
                    <fullName>EU12</fullName>
                    <label>EU12 - COMPLAINT RIO</label>
                </value>
                <value>
                    <fullName>EU13</fullName>
                    <label>EU13 - COMPLAINT AB BIODISKS</label>
                </value>
                <value>
                    <fullName>EU14</fullName>
                    <label>EU14 - COMPLAINT SYSMEX</label>
                </value>
                <value>
                    <fullName>EU15</fullName>
                    <label>EU15 - COMPLAINT BTF</label>
                </value>
                <value>
                    <fullName>EU16</fullName>
                    <label>EU16 - Global System Support Molecular</label>
                </value>
                <value>
                    <fullName>EU17</fullName>
                    <label>EU17 - VERNIOLLE</label>
                </value>
                <value>
                    <fullName>EU18</fullName>
                    <label>EU18 - COMBOURG REAGENT</label>
                </value>
                <value>
                    <fullName>EU19</fullName>
                    <label>EU19 - SAINT BRIEUC</label>
                </value>
                <value>
                    <fullName>EU20</fullName>
                    <label>EU20 - THIRD PARTY LBM</label>
                </value>
                <value>
                    <fullName>EU21</fullName>
                    <label>EU21 - BERNRIED - Germany</label>
                </value>
                <value>
                    <fullName>EU22</fullName>
                    <label>EU22 - COMBOURG EQUIPMENT</label>
                </value>
                <value>
                    <fullName>NA01</fullName>
                    <label>NA01 - QA DURHAM</label>
                </value>
                <value>
                    <fullName>NA02</fullName>
                    <label>NA02 - QA ST LOUIS</label>
                </value>
                <value>
                    <fullName>NA03</fullName>
                    <label>NA03 - QA LOMBARD</label>
                </value>
                <value>
                    <fullName>NA04</fullName>
                    <label>NA04 - GSS BACT/ALERT</label>
                </value>
                <value>
                    <fullName>NA05</fullName>
                    <label>NA05 - GSS VITEK</label>
                </value>
                <value>
                    <fullName>NA06</fullName>
                    <label>NA06 - CSI ST LOUIS</label>
                </value>
                <value>
                    <fullName>NA09</fullName>
                    <label>NA09 - SALT LAKE CITY</label>
                </value>
                <value>
                    <fullName>NA10</fullName>
                    <label>NA10 - LAVAL</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_LastSent_c__c</fullName>
        <externalDeveloperName>SO_LastSent__c</externalDeveloperName>
        <inlineHelpText>Date/Time of last sending of the Service Order to SAP.</inlineHelpText>
        <label>SAP SO - Last Sent Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SW_Age_c__c</fullName>
        <externalDeveloperName>SW_Age__c</externalDeveloperName>
        <label>SW Age</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesOrderNumber_c__c</fullName>
        <externalDeveloperName>SalesOrderNumber__c</externalDeveloperName>
        <label>Sales Order Number</label>
        <length>10</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrder_c__c</fullName>
        <externalDeveloperName>SalesOrder__c</externalDeveloperName>
        <label>Sales Order</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SatisfactionCode_c__c</fullName>
        <externalDeveloperName>SatisfactionCode__c</externalDeveloperName>
        <label>Satisfaction</label>
        <length>18</length>
        <referenceTo>CodeGroup_c__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case3</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Name_c__c</fullName>
        <externalDeveloperName>Satisfaction_Name__c</externalDeveloperName>
        <label>Satisfaction Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satisfaction_c__c</fullName>
        <externalDeveloperName>Satisfaction__c</externalDeveloperName>
        <label>Satisfaction</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SendATCemail_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>SendATCemail__c</externalDeveloperName>
        <inlineHelpText>Click "Close Case" button to check this checkbox.
If checked, when the Case is closed the ATC is emailed to the Customer</inlineHelpText>
        <label>Send ATC Email</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SerialNumberAsset_c__c</fullName>
        <externalDeveloperName>SerialNumberAsset__c</externalDeveloperName>
        <inlineHelpText>If the Case concerns an Asset of record type “bioMérieux Equipment”, 
The Serial Number of the Asset is auto-populated</inlineHelpText>
        <label>Serial Number (Asset)</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ServiceResource_c__c</fullName>
        <externalDeveloperName>ServiceResource__c</externalDeveloperName>
        <inlineHelpText>If the Service Complaint is about an FSE/FAS, reference that person here</inlineHelpText>
        <label>Service Resource</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToLocation_c__c</fullName>
        <externalDeveloperName>ShipToLocation__c</externalDeveloperName>
        <label>Ship-to Location</label>
        <length>18</length>
        <referenceTo>Location__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>ShipToParty_c__c</fullName>
        <externalDeveloperName>ShipToParty__c</externalDeveloperName>
        <label>Ship-to-Party</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShiptoLocationSapNumber_c__c</fullName>
        <externalDeveloperName>ShiptoLocationSapNumber__c</externalDeveloperName>
        <label>Ship-to Location SAP Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SlaExitDate__c</fullName>
        <externalDeveloperName>SlaExitDate</externalDeveloperName>
        <label>Entitlement Process End Time</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SlaStartDate__c</fullName>
        <externalDeveloperName>SlaStartDate</externalDeveloperName>
        <label>Entitlement Process Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SoftwareCode_c__c</fullName>
        <externalDeveloperName>SoftwareCode__c</externalDeveloperName>
        <label>Case Software Version</label>
        <length>18</length>
        <referenceTo>CodeGroup_c__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case2</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>SofwareVersion_c__c</fullName>
        <externalDeveloperName>SofwareVersion__c</externalDeveloperName>
        <inlineHelpText>Software Version of the Asset referenced in the Case</inlineHelpText>
        <label>Current Sofware version</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SourceId__c</fullName>
        <externalDeveloperName>SourceId</externalDeveloperName>
        <label>Source ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <externalDeveloperName>Source__c</externalDeveloperName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer / Distributor</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Field Outsourced Companies</fullName>
                </value>
                <value>
                    <fullName>Regulatory Authorities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusDurationMin_Assigned_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_Assigned__c</externalDeveloperName>
        <label>StatusDurationMin Assigned</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_ClosedIrrelevant_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_ClosedIrrelevant__c</externalDeveloperName>
        <label>StatusDurationMin ClosedIrrelevant</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_Closed_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_Closed__c</externalDeveloperName>
        <label>StatusDurationMin Closed</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_InProgressL1_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_InProgressL1__c</externalDeveloperName>
        <label>StatusDurationMin InProgressL1</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_InProgressL2_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_InProgressL2__c</externalDeveloperName>
        <label>StatusDurationMin InProgressL2</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_Investigation_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_Investigation__c</externalDeveloperName>
        <label>StatusDurationMin Investigation</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_New_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_New__c</externalDeveloperName>
        <label>StatusDurationMin New</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusDurationMin_WaitingForReply_c__c</fullName>
        <externalDeveloperName>StatusDurationMin_WaitingForReply__c</externalDeveloperName>
        <label>StatusDurationMin WaitingForReply</label>
        <precision>16</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <externalDeveloperName>Status</externalDeveloperName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>In Progress L1</fullName>
                </value>
                <value>
                    <fullName>Waiting for Reply</fullName>
                    <label>Waiting Customer Reply</label>
                </value>
                <value>
                    <fullName>In Progress L2</fullName>
                </value>
                <value>
                    <fullName>Investigation</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Irrelevant</fullName>
                    <label>Closed Irrelevant</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StopStartDate__c</fullName>
        <externalDeveloperName>StopStartDate</externalDeveloperName>
        <label>Stopped Since</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
</CustomObject>